ploptions.example.conf - Added new crap for the archiver/blb limits
git-svn-id: http://subversion.assembla.com/svn/the-archives/trunk@61 79fbe802-9451-432d-9ef8-bd2fc9be3b1e

--- a/config/ploptions.example.conf
+++ b/config/ploptions.example.conf
@@ -27,3 +27,18 @@ admin: 2097152
 mod: 262144
 op: 110592
 other: 8124
+
+[archiver]
+enable_archiver: false
+
+[blb]
+use_blb_limiter: false
+player: 0
+builder: 0
+member: 0
+op: 0
+mod: 0
+admin: 0
+director: 0
+owner: 0
+worldowner: 0
