-Disable imagedraw if loading from PIL failed -Member -> Helper in ploptions.example.conf
git-svn-id: http://subversion.assembla.com/svn/the-archives/trunk@62 79fbe802-9451-432d-9ef8-bd2fc9be3b1e

--- a/config/ploptions.example.conf
+++ b/config/ploptions.example.conf
@@ -19,15 +19,6 @@ backup_max: 50
 
 currency: Minecash
 
-[build]
-#This section is for your blb and related command limits here.
-
-director: 1073741824
-admin: 2097152
-mod: 262144
-op: 110592
-other: 8124
-
 [archiver]
 enable_archiver: false
 
@@ -35,8 +26,8 @@ enable_archiver: false
 use_blb_limiter: false
 player: 0
 builder: 0
-member: 0
 op: 0
+helper: 0
 mod: 0
 admin: 0
 director: 0
