protocol.py - Settings are now loaded systematically. Read DEFAULT_TEMPLATE.ini - this is how player data will be defaulted. logger.py - Fixed debug output. Added some ignores for logs files and ranks.meta
git-svn-id: http://subversion.assembla.com/svn/the-archives/trunk@65 79fbe802-9451-432d-9ef8-bd2fc9be3b1e

--- a/data/players/DEFAULT_TEMPLATE.ini
+++ b/data/players/DEFAULT_TEMPLATE.ini
@@ -1,3 +1,11 @@
+[sections]
+clans:
+worlds:
+chat:
+data:
+;This is used to keep everything in check.
+;If more section headers are added, put them here too, or they won't be read!
+
 [clans]
 wordfiler: false
 
