-Add bit.ly switch -more /google
git-svn-id: http://subversion.assembla.com/svn/the-archives/trunk@67 79fbe802-9451-432d-9ef8-bd2fc9be3b1e

--- a/config/ploptions.example.conf
+++ b/config/ploptions.example.conf
@@ -33,3 +33,9 @@ admin: 0
 director: 0
 owner: 0
 worldowner: 0
+
+[internet]
+#Handles internet related options.
+use_bitly: true
+bitly_username:
+bitly_apikey:
