-Fixed plugin problems -UNSTABLE: ServerPlugin test (blah)
and sorry to leave this crap to ya all :P

git-svn-id: http://subversion.assembla.com/svn/the-archives/trunk@135 79fbe802-9451-432d-9ef8-bd2fc9be3b1e

--- a/config/plugins.example.conf
+++ b/config/plugins.example.conf
@@ -14,11 +14,12 @@ core:
 entities:
 grieferdetector:
 help:
-imagedraw:
-inbox:
+interaction:
+internet:
 #isoimage:
 jail:
 #lava:
+lsystem:
 mine:
 modutil:
 msgblocks:
