DEFAULT_TEMPLATE_PLAYER.ini - Added default for the chat type symbols - Removed section list (It isn't needed)
git-svn-id: http://subversion.assembla.com/svn/the-archives/trunk@137 79fbe802-9451-432d-9ef8-bd2fc9be3b1e

--- a/data/DEFAULT_TEMPLATE_PLAYER.ini
+++ b/data/DEFAULT_TEMPLATE_PLAYER.ini
@@ -1,21 +1,11 @@
-[sections]
-main:
-misc:
-clans:
-worlds:
-chat:
-bank:
-;This is used to keep everything in check.
-;If more section headers are added, put them here too, or they won't be read!
-
 [main]
-ip = 
-homeworld = main
-lastseen = 
-quitmsg = Goodbye.
+ip:
+homeworld: main
+lastseen: 
+quitmsg: Goodbye.
 
 [misc]
-title = 
+title:
 
 [clans]
 wordfilter: false
@@ -23,8 +13,13 @@ wordfilter: false
 [worlds]
 
 [chat]
-wordfiler: false
+wordfilter: false
 type: global
+; Symbol prefixes for the types of chat
+worldsymbol: !
+globalsymbol: =
+clansymbol: ~
+adminsymbol: #
 
 [bank]
 balance: 0
