main.example.conf - Edited default name and MOTD
git-svn-id: http://subversion.assembla.com/svn/the-archives/trunk@141 79fbe802-9451-432d-9ef8-bd2fc9be3b1e

--- a/config/main.example.conf
+++ b/config/main.example.conf
@@ -2,8 +2,8 @@
 #This section modifies your Servers Name, Description, Owner (used in
 #staff/about, makes Directors), Max Clients, and if Public.
 
-name: Test server
-description: A test server for now.
+name: Arc
+description: Arc - The boat is no longer sinking!
 public: true
 max_clients: 21
 owner: yournamehere
