mcbans.py - Added a lot more integration protocol.py - Added a server hook for when a player leaves: playerQuit
git-svn-id: http://subversion.assembla.com/svn/the-archives/trunk@208 79fbe802-9451-432d-9ef8-bd2fc9be3b1e

--- a/config/plugins/mcbans.conf
+++ b/config/plugins/mcbans.conf
@@ -5,4 +5,4 @@ ban_threshold: 1
 ; Setting this to 0 will prevent MCBans from kicking anyone because of reputation, set this to kick anyone of a reputation less than you set.
 
 [exceptions]
-; Add ban exceptions here, so MCBans will ignore their reputation
+; Add exceptions here
