config/ - Updated the example configuration files
git-svn-id: http://subversion.assembla.com/svn/the-archives/trunk@256 79fbe802-9451-432d-9ef8-bd2fc9be3b1e

--- a/config/main.example.conf
+++ b/config/main.example.conf
@@ -1,13 +1,13 @@
 [main]
-#This section modifies your Servers Name, Description, Owner (used in
-#staff/about, makes Directors), Max Clients, and if Public.
+; This section modifies your Servers Name, Description, Owner (used in
+; staff/about, makes Directors), Max Clients, and if Public.
 
 name: Arc
 description: Arc - The boat is no longer sinking!
 public: true
 max_clients: 21
 owner: yournamehere
-salt: 
+salt: Select this text and mash your keyboard.
 
 [network]
 #This section modifies the port for your server, and the controller
@@ -16,3 +16,22 @@ salt:
 port: 25565
 controller_port: 50012
 controller_password: nyan
+
+[heartbeatnames]
+;1: Arc 1
+;2: Arc 2
+;3: Arc 3
+;4: Arc 4
+;5: Arc 5
+
+[heartbeatports]
+;1: 25566
+;2: 25567
+;3: 25568
+;4: 25569
+;5: 25570
+
+; The two above sections are used to spoof up to five extra heartbeats.
+; The data in them serves as an example.
+; Make sure the starting numbers are the same in both sections.
+; Make sure all the ports are different and not the same as the main port.
