--- a/config/plugins.example.conf
+++ b/config/plugins.example.conf
@@ -8,18 +8,16 @@ bank:
 blb:
 buildlib:
 buildutil:
+blocktracker:
 #buy:
 cmdblocks:
-core:
 entities:
 grieferdetector:
 help:
-interaction:
-internet:
 #isoimage:
 jail:
 #lava:
-lsystem:
+mcbans:
 mine:
 modutil:
 msgblocks:
@@ -27,7 +25,6 @@ playerutil:
 portals:
 survival:
 tnt:
-#tracking:
 worldutil:
 undo:
 zones:
