-buildutil.py: changed place of a message -Disabled blocktracker due to the following reasons: 1. It creates a lot of(although non-critical) exceptions 2. It overrides /bind and entities, causing them to not work
git-svn-id: http://subversion.assembla.com/svn/the-archives/trunk@288 79fbe802-9451-432d-9ef8-bd2fc9be3b1e

--- a/config/plugins.example.conf
+++ b/config/plugins.example.conf
@@ -8,7 +8,7 @@ bank:
 blb:
 buildlib:
 buildutil:
-blocktracker:
+#blocktracker:
 #buy:
 cmdblocks:
 entities:
@@ -23,7 +23,7 @@ modutil:
 msgblocks:
 playerutil:
 portals:
-survival:
+#survival:
 tnt:
 worldutil:
 undo:
