-Added back missing server field in irc.conf -Python no longer have to be installed in C:/Python26
git-svn-id: http://subversion.assembla.com/svn/the-archives/trunk@359 79fbe802-9451-432d-9ef8-bd2fc9be3b1e

--- a/config/irc.example.conf
+++ b/config/irc.example.conf
@@ -4,6 +4,7 @@
 ;channel and if you want commands to go to IRC (good for low traffic)
 ;One more thing, turn StaffChat on for IRC purposes (relaying in irc)
 
+server:
 port: 6667
 nick: botname
 password: botpass
