Added support for WoM Direct+
git-svn-id: http://subversion.assembla.com/svn/the-archives/trunk@377 79fbe802-9451-432d-9ef8-bd2fc9be3b1e

--- a/config/options.example.conf
+++ b/config/options.example.conf
@@ -9,6 +9,7 @@ info_url: http://archivesmc.com
 away_kick: true
 away_time: 10
 colors: true
+wom_heartbeat: true
 
 [worlds]
 ; This section lets you set the name of default, the world for if default
