Removed grieferdetector.py - it was a mess. Newer version coming soon. Removed survival.py. Documentation fixes.
git-svn-id: http://subversion.assembla.com/svn/the-archives/trunk@424 79fbe802-9451-432d-9ef8-bd2fc9be3b1e

--- a/config/plugins.example.conf
+++ b/config/plugins.example.conf
@@ -8,22 +8,21 @@ bank:
 blb:
 buildlib:
 buildutil:
-#blocktracker:
+blocktracker:
 #buy:
 cmdblocks:
 entities:
-grieferdetector:
 help:
 #isoimage:
 jail:
 #lava:
+lsystem:
 mcbans:
 mine:
 modutil:
 msgblocks:
 playerutil:
 portals:
-#survival:
 tnt:
 worldutil:
 undo:
