-Completely got rid of ploptions.example.conf -Rewritten config loading bit (some are still not finished, I know) -Other bugfixes
git-svn-id: http://subversion.assembla.com/svn/the-archives/trunk@432 79fbe802-9451-432d-9ef8-bd2fc9be3b1e

--- a/config/archiver.example.conf
+++ b/config/archiver.example.conf
@@ -1,3 +1,11 @@
+[cfginfo]
+; DO NOT EDIT THIS SECTION UNLESS REQUIRED BY UPGRADE PROCESS!
+name = options.conf
+version = 1.0.0
+
 [client]
+; Archiver username
 username = 
+
+; Archiver password
 password = 
