--- a/config/plugins.example.conf
+++ b/config/plugins.example.conf
@@ -1,7 +1,14 @@
+[cfginfo]
+; DO NOT EDIT THIS SECTION UNLESS REQUIRED BY UPGRADE PROCESS!
+name = plugins.conf
+version = 1.0.0
+
 [plugins]
-#This section is for what plugins to load on startup, the syntax works
-#like "pluginname:" which would match "pluginname.py" in the plugins
-#folder.
+; This section is for what plugins to load on startup, the syntax works
+; like "pluginname:" which would match "pluginname.py" in the plugins
+; folder.
+; If you would like to temporaily disable a plugin, put a ; before it.
+; Example: "; disabledplugin:"
 
 archives:
 bank:
