--- a/config/plugins/mcbans.example.conf
+++ b/config/plugins/mcbans.example.conf
@@ -1,3 +1,8 @@
+[cfginfo]
+; DO NOT EDIT THIS SECTION UNLESS REQUIRED BY UPGRADE PROCESS!
+name = mcbans.conf
+version = 1.0.0
+
 [mcbans]
 ;apikey: XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 ; Fill in the API key and remove the ; before it to use MCBans.
