--- a/config/wordfilter.example.conf
+++ b/config/wordfilter.example.conf
@@ -1,3 +1,8 @@
+[cfginfo]
+; DO NOT EDIT THIS SECTION UNLESS REQUIRED BY UPGRADE PROCESS!
+name = wordfilter.conf
+version = 1.0.0
+
 [filter]
 #Number of filters applied, note that if you put down "100" you must
 #have 100 fiters, or the server will not boot. However, if you put down
