--- a/config/main.example.conf
+++ b/config/main.example.conf
@@ -1,19 +1,35 @@
-[main]
-; This section modifies your Servers Name, Description, Owner (used in
-; staff/about, makes Directors), Max Clients, and if Public.
+[cfginfo]
+; DO NOT EDIT THIS SECTION UNLESS REQUIRED BY UPGRADE PROCESS!
+name = main.conf
+version = 1.0.0
 
+[main]
+; Server name
 name: Arc
+
+; Server description
 description: Arc - The boat is no longer sinking!
+
+; Public? (shows in minecraft.net/servers.jsp)
 public: true
+
+; Maximum amount of client allowed to connect at one time
 max_clients: 21
+
+; Salt, for verification purposes
 salt: Select this text and mash your keyboard.
 
 [network]
-#This section modifies the port for your server, and the controller
-#port and password.
-
+; Port the server should listen on.
 port: 25565
+
+; Use the controller?
+use_controller: true
+
+; Port the controller should listen on.
 controller_port: 50012
+
+; Controller password
 controller_password: nyan
 
 [heartbeatnames]
