-Low lag mode. In low lag mode, player join/quit messages are not sent to save bandwidth. -Other fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
-
+*.pyc
+*.pyo
 /trunk/arc/archives
 /trunk/logs
+/trunk/config/data/SERVERURL
+/trunk/config/data/bans.meta
+/trunk/config/data/inbox.db
+/trunk/config/data/lastseen.meta
+/trunk/config/data/ranks.meta
+/trunk/config/irc.conf
+/trunk/config/main.conf
+/trunk/config/options.conf
+/trunk/config/plugins.conf
+/trunk/config/wordfilter.conf
+/trunk/data/players
+/trunk/worlds
+/trunk/config/data/spectators.meta
