--- a/trunk/config/options.example.conf
+++ b/trunk/config/options.example.conf
@@ -1,7 +1,7 @@
 [cfginfo]
 ; DO NOT EDIT THIS SECTION UNLESS REQUIRED BY UPGRADE PROCESS!
 name = options.conf
-version = 1.0.0
+version = 1.0.1
 
 [options]
 ; Allow duplicate logins? Recommended value: false
@@ -15,6 +15,12 @@ colors: true
 
 ; Enable WoM heartbeat
 wom_heartbeat: true
+
+; Enable low-lag mode?
+enable_lowlag: false
+
+; How many players should be on to turn on low-lag mode? (The server checks for this every minute.)
+lowlag_players: 20
 
 [worlds]
 ; Name of default world
