-Replaced devtools.py with serverutil.py -Fixed /banb not banning people on mcbans correctly -Removed /settitle - Other traces will be removed soon -Fixed /reload

--- a/trunk/config/plugins.example.conf
+++ b/trunk/config/plugins.example.conf
@@ -15,12 +15,14 @@ bank:
 blb:
 buildlib:
 buildutil:
-blocktracker:
 #buy:
+blocktracker:
 cmdblocks:
+core:
 entities:
 help:
-#isoimage:
+interaction:
+internet:
 jail:
 #lava:
 lsystem:
@@ -30,7 +32,8 @@ modutil:
 msgblocks:
 playerutil:
 portals:
+serverutil:
 tnt:
-worldutil:
 undo:
+worldutil:
 zones:
