Beginning of the new IRC client (kindly donated by MystX, thanks!) and start of rewritten message filter handling. There are currently some bugs so it's put into its own branch.
Current known bugs:
-All IRC commands are gone
-On joining multiple channels #channel1's NAMES list will go into #channel2's NAMES list, and vice versa.
-$load and $unload does not work at the moment. (need to implement registerCommand and registerHook)
-Message filtering is not fully handled at the moment, so weird characters will appear in the game and in the console.
-More nasty bugs waiting to be found

--- a/trunk/config/irc.example.conf
+++ b/trunk/config/irc.example.conf
@@ -1,14 +1,43 @@
-[irc]
-;This section is for IRC bots, this allows you to enable them. Please
-;specify a server, port, nick, password for the bot to identify, the
-;channel and if you want commands to go to IRC (good for low traffic)
-;One more thing, turn StaffChat on for IRC purposes (relaying in irc)
+[cfginfo]
+; DO NOT EDIT THIS SECTION UNLESS REQUIRED BY UPGRADE PROCESS!
+name = irc.conf
+version = 1.0.0
 
+[irc]
+; Use IRC Bot?
+use_irc: true
+
+; IRC server
 server:
+
+; IRC port
 port: 6667
-nick: botname
-password: botpass
-channel: #channel
-cmdlogs: false
-staffchat: false
-ircbot: true
+
+; IRC bot nickname
+nick: artest
+
+; IRC bot password (leave blank for no password)
+password: 
+
+; Use SSL to connect? (Leave false if unsure)
+use_ssl: false
+
+; User modes that has access to admin commands (If you are not sure, leave this as is)
+adminmodes: @
+
+; Modules to load during startup:
+modules: 
+
+[channels]
+; Format: Identifier (in later parts of the config): channel name
+0: #channel
+
+; This is an example for an example channel configuration.
+; For now, please ignore this part.
+
+;[0]
+; Chat channel this channel belongs to
+; channel: 
+
+; Transfer command usage to this channel?
+; cmdlogs: true
