-Blocktracker updates, now merged with /undo (/redo is gone), fixed OperationalError on shutdown -New config decorator: disabled_cmdblocks (stops commands from being run in a cmdblock) -Fixed ImportError when WoM redirects heartbeat traffic to https and OpenSSL is not installed on the system -Merged tnt and mines into 1 plugin file (explosives.py) -Somewhat major code cleanup

--- a/trunk/config/plugins.example.conf
+++ b/trunk/config/plugins.example.conf
@@ -20,6 +20,7 @@ blocktracker:
 cmdblocks:
 core:
 entities:
+explosives:
 help:
 interaction:
 internet:
@@ -27,13 +28,10 @@ jail:
 #lava:
 lsystem:
 mcbans:
-mine:
 modutil:
 msgblocks:
 playerutil:
 portals:
 serverutil:
-tnt:
-undo:
 worldutil:
 zones:
